--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,38 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-dominate==2.5.2
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-CKEditor==0.4.4.1
-Flask-Gravatar==0.5.0
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-requests==2.24.0
-SQLAlchemy==1.3.19
-urllib3==1.25.10
-visitor==0.1.3
-Werkzeug==1.0.1
-WTForms==2.3.3
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+cryptography==37.0.2
+Flask==2.1.2
+gunicorn==20.1.0
+h11==0.13.0
+heroku==0.1.4
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+numpy==1.23.0
+outcome==1.2.0
+pandas==1.4.3
+pycparser==2.21
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+python-dateutil==1.5
+pytz==2022.1
+requests==2.28.1
+selenium==4.3.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+trio==0.21.0
+trio-websocket==0.9.2
+urequests==0.1.2
+urllib3==1.26.9
+Werkzeug==2.1.2
+wsproto==1.1.0
